--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -26,7 +26,7 @@
 /* Heading */
 .about-content h1 {
   font-size: 2.5rem;
-  color: #764ba2;
+  color: black;
   margin-bottom: 10px;
 }
 
@@ -54,7 +54,7 @@
 }
 
 .about-highlight h3 {
-  color: #5b3990;
+  color: black;
   margin-bottom: 10px;
 }
 
@@ -73,5 +73,5 @@
 .about-footer {
   margin-top: 20px;
   font-weight: 500;
-  color: #764ba2;
+  color: black;
 }
